--- a/packages/camera_notifications.yaml
+++ b/packages/camera_notifications.yaml
@@ -19,6 +19,8 @@ automation:
         entity_id: timer.camera_alerts_disabled
     - service: notify.slack
       data_template:
+        icon: ":movie_camera:"
+        username: "Camera Alert"
         target: ["#alerts"]
         message: "Camera Alerts disabled for 30 minutes"
   # timer ended, turn camera alerts on
@@ -60,6 +62,8 @@ script:
           seconds: 6
       - service: notify.slack
         data_template:
+          icon: ":movie_camera:"
+          username: "Camera Alert"
           target: ["#alerts"]
           message: "Motion detected at Front Beam"
           data:
