--- a/packages/vacuum.yaml
+++ b/packages/vacuum.yaml
@@ -48,6 +48,8 @@ automation:
     action:
     - service: notify.slack
       data_template:
+        icon: ":robot_face:"
+        username: "Vacuum Robot"
         title: 'Vacuum Robot'
         target: ["#general"]
         message: >
@@ -88,6 +90,8 @@ automation:
     action:
     - service: notify.slack
       data_template:
+        icon: ":robot_face:"
+        username: "Vacuum Robot"
         title: 'Vacuum Robot Error'
         target: ["#general"]
         message: >
@@ -105,6 +109,8 @@ automation:
     action:
     - service: notify.slack
       data_template:
+        icon: ":robot_face:"
+        username: "Vacuum Robot"
         title: 'Vacuum Robot'
         target: ["#general"]
         message: >
@@ -134,6 +140,8 @@ script:
           seconds: 5
       - service: notify.slack
         data_template:
+          icon: ":robot_face:"
+          username: "Vacuum Robot"
           target: ["#general"]
           message: >
             Vacuum Robot latest cleaning stats:{{- '\n' -}}
