--- a/packages/vacuum.yaml
+++ b/packages/vacuum.yaml
@@ -145,14 +145,12 @@ script:
         data_template:
           target: ["#general"]
           message: >
-            :robot_face: Vacuum Robot latest cleaning stats:{{- '\n' -}}
+            Vacuum Robot latest cleaning stats:{{- '\n' -}}
             Duration: {{ (states.vacuum.rockrobo.attributes.last_run_stats.duration|int)/60|round(1) }} minutes{{- '\n' -}}
             Area: {{ states.vacuum.rockrobo.attributes.last_run_stats.area }} m2{{- '\n' -}}
 #          Start time: {{ states.vacuum.rockrobo.attributes.last_run_stats.startTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
 #          End time: {{ states.vacuum.rockrobo.attributes.last_run_stats.endTime|int|timestamp_custom("%d.%m.%Y %H:%M") }}{{- '\n' -}}
           data:
-            #icon: ":robot_face:"
-            #username: "Vacuum Robot"
             file: 
               path: "/config/www/cam_captures/rockrobo_map_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
               ### path is now required as of 0.113.0 see https://github.com/home-assistant/home-assistant.io/pull/13860/files
