add zigbee.db to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ appdaemon/dashboards/
 home-assistant_v2.db
 home-assistant_v2.db-shm
 home-assistant_v2.db-wal
+zigbee.db
 tts/
 webostv.conf
 notebooks/
